# product-edit-rest

./: .env  .gitignore  Cargo.toml  config.toml
migrations/00000000000000_initial_setup/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  products.rs  schema.rs
src/models/: product.rs
src/routes/: catchers.rs  mod.rs  products.rs
tests/: routes.rs
