[package]
name = "product-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
itertools = "0.10.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool", "sqlite_pool"] }